# papara

./: CONTRIBUTING.md  COPYING  INSTALL  LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  roadmap  setup.sh
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
contrib/: gitian-build.sh  papara-qt.pro  paparad.bash-completion
depends/: README.md
doc/: Doxyfile  Doxyfile.in  README.md  README_osx.md  README_windows.txt  build-osx.md  build-unix.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  guide-startmany.md  init.md  keepass.md  masternode-budget.md  masternode_conf.md  multiwallet-qt.md  release-notes.md  release-process.md  swifttx.md  tor.md  translation_process.md  unit-tests.md  zmq.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  Paparad.cpp  accumulatormap.cpp  accumulatormap.h  activemasternode.cpp  activemasternode.h  amount.cpp  base58.h  chainparams.cpp  chainparams.h  chainparamsbase.h  checkpoints.cpp  clientversion.cpp  clientversion.h  coins.h  compat.h  init.cpp  (+59 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  blockexplorer.cpp  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macnotificationhandler.mm  multisigdialog.cpp  notificator.h  obfuscationconfig.cpp  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  overviewpage.h  papara.cpp  papara.qrc  papara_locale.qrc  paparastrings.cpp  paymentserver.cpp  paymentserver.h  privacydialog.cpp  privacydialog.h  receiverequestdialog.cpp  recentrequeststablemodel.h  rpcconsole.cpp  sendcoinsdialog.cpp  splashscreen.cpp  transactiondesc.cpp  (+11 more)
src/qt/forms/: addressbookpage.ui  bip38tooldialog.ui  blockexplorer.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  multisenddialog.ui  multisigdialog.ui  obfuscationconfig.ui  optionsdialog.ui  overviewpage.ui  privacydialog.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  zparacontroldialog.ui
src/qt/locale/: papara_bg.ts  papara_ca.ts  papara_cs.ts  papara_da.ts  papara_de.ts  papara_en.ts  papara_en_GB.ts  papara_en_US.ts  papara_eo.ts  papara_es.ts  papara_es_ES.ts  papara_fi.ts  papara_fr_FR.ts  papara_hi_IN.ts  papara_hr.ts  papara_hr_HR.ts  papara_it.ts  papara_ja.ts  papara_ko_KR.ts  papara_lt_LT.ts  papara_nl.ts  papara_pl.ts  papara_pt.ts  papara_pt_BR.ts  papara_ro_RO.ts  papara_ru.ts  papara_sk.ts  papara_sv.ts  papara_tr.ts  papara_uk.ts  papara_vi.ts  papara_zh_CN.ts  papara_zh_TW.ts
src/qt/papara/: addnewaddressdialog.cpp  addnewcontactdialog.cpp  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addresslabelrow.cpp  coincontrolpivwidget.cpp  contactdropdownrow.cpp  contactsdropdown.cpp  contactsdropdown.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  denomgenerationdialog.cpp  emailinputdialog.cpp  expandablebutton.cpp  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  linkswidget.cpp  loadingdialog.cpp  loadingdialog.h  lockunlock.cpp  masternodeswidget.cpp  masternodeswidget.h  masternodewizarddialog.cpp  masternodewizarddialog.h  mninfodialog.cpp  mninfodialog.h  mnmodel.cpp  mnrow.cpp  myaddressrow.cpp  navmenuwidget.cpp  optionbutton.cpp  paparagui.cpp  paparagui.h  pwidget.cpp  pwidget.h  qtutils.cpp  qtutils.h  receivedialog.cpp  (+22 more)
src/qt/papara/forms/: addresseswidget.ui  linkswidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  receivewidget.ui  send.ui  topbar.ui  welcomecontentwidget.ui
src/qt/papara/res/css/: style_dark.css  style_light.css
src/qt/papara/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/papara/settings/forms/: settingsfaqwidget.ui  settingswidget.ui
src/qt/ppapara/: addresseswidget.cpp  addresseswidget.h  coincontrolpivwidget.cpp  contactdropdownrow.cpp  contactsdropdown.cpp  dashboardwidget.cpp  defaultdialog.cpp  expandablebutton.cpp  furabstractlistitemdelegate.h  loadingdialog.h  mnmodel.cpp  myaddressrow.cpp  navmenuwidget.h  paparagui.cpp  paparagui.h  pwidget.h  qtutils.h  receivedialog.cpp  receivewidget.cpp  requestdialog.cpp  requestdialog.h  send.cpp  send.h  sendconfirmdialog.cpp  sendmultirow.cpp  snackbar.h  tooltipmenu.h  topbar.cpp  txviewholder.cpp  txviewholder.h  welcomecontentwidget.cpp
src/qt/ppapara/forms/: addresseswidget.ui  coincontrolpivwidget.ui  dashboardwidget.ui  masternodewizarddialog.ui  receivewidget.ui  send.ui  sendconfirmdialog.ui  txrow.ui
src/qt/ppapara/res/css/: style_dark.css  style_light.css
src/qt/ppapara/settings/: settingsbackupwallet.cpp  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsinformationwidget.cpp  settingsmainoptionswidget.cpp  settingsmultisenddialog.cpp  settingsmultisendwidget.h  settingswidget.cpp  settingswidget.h
src/qt/ppapara/settings/forms/: settingsdisplayoptionswidget.ui  settingsfaqwidget.ui  settingsmainoptionswidget.ui  settingswidget.ui
src/qt/res/: papara-qt-res.rc
src/qt/res/css/: default.css
src/qt/test/: test_main.cpp  uritests.cpp
(+101 files in other folders)
